--- a/go_or_no-vue/src/assets/sass/paper/_sidebar-and-main-panel.scss
+++ b/go_or_no-vue/src/assets/sass/paper/_sidebar-and-main-panel.scss
@@ -60,12 +60,14 @@
           height: 40px;
           margin-left: 0px;
           margin-right: 10px;
-          background: white;
+          background: skyblue;
           border-radius: 40px;
+          // border: 2px solid white;
           text-align: center;
 
         img{
             max-width: 21px;
+            margin-top: -8px;
         }
       }
     }
