--- a/go_or_no-vue/src/assets/sass/paper/_cards.scss
+++ b/go_or_no-vue/src/assets/sass/paper/_cards.scss
@@ -221,8 +221,9 @@
 
 .card-map {
   .map {
-    height: 500px;
-    padding-top: 20px;
+    width: 100%;
+    height: 70vh;
+    // padding-top: 20px;
 
     > div {
       height: 100%;
