맵 레이아웃 변경 - 라우트 메타(meta) 이

--- a/go_or_no-vue/src/assets/sass/paper/_cards.scss
+++ b/go_or_no-vue/src/assets/sass/paper/_cards.scss
@@ -219,17 +219,17 @@
   }
 }
 
-.card-map {
-  .map {
-    width: 100%;
-    height: 70vh;
-    // padding-top: 20px;
+// .card-map {
+//   .map {
+//     width: 100%;
+//     height: 70vh;
+//     // padding-top: 20px;
 
-    > div {
-      height: 100%;
-    }
-  }
-}
+//     > div {
+//       height: 100%;
+//     }
+//   }
+// }
 
 .card-user,
 .card-price {
